--- a/content/cn/posts/字典树.md
+++ b/content/cn/posts/字典树.md
@@ -13,7 +13,7 @@ draft: false
 
 ## 字典树定义
 字典树就是个🌲结构，只不过他的子节点代表了在他之后会出现的字符。我们要做的就是把一个个字符串加入到字典树中，让这棵树帮我们存储所有字符串。举个🌰，把字符串ab和aab加入到字典树中，则字典树的结构如下：
-![image](../../../static/images/字典树01.png)
+![image](../../images/字典树01.png)
 
 
 
@@ -38,7 +38,7 @@ draft: false
 
 参考代码：
 
-```Go
+```go
 package main
 
 import (
