[修改]文章[字典树/前缀树]-笔误

--- a/content/cn/posts/字典树.md
+++ b/content/cn/posts/字典树.md
@@ -17,7 +17,7 @@ draft: false
 
 
 
-喏，通过橙色路径我们可以得到ab，通过绿色路径我们可以得到aab。有没有发现，他们都停在了isEnd=true的节点上。😲
+喏，通过橙色路径我们可以得到aab，通过绿色路径我们可以得到ab。有没有发现，他们都停在了isEnd=true的节点上。😲
 
 其实这里的isEnd表示的是否存在一个字符串以该点为结束点，next数组则指向那些以根节点到该节点的路径为前缀，之后还存在其他字符的情况。（根节点向来不存储东西，只是一个空节点）
 
