尝试修复markdown $问题

--- a/content/cn/posts/二进制.md
+++ b/content/cn/posts/二进制.md
@@ -5,6 +5,23 @@ categories: ['Math']
 draft: false
 ---
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/katex.min.css" integrity="sha384-bYdxxUwYipFNohQlHt0bjN/LCpueqWz13HufFEV1SUatKs1cm4L6fFgCi1jT643X" crossorigin="anonymous">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/katex.min.js" integrity="sha384-Qsn9KnoKISj6dI8g7p1HBlNpVx0I8p1SvlwOldgi3IorMle61nQy4zEahWYtljaz" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05" crossorigin="anonymous"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        renderMathInElement(document.body, {
+          delimiters: [
+              {left: '$$', right: '$$', display: true},
+              {left: '$', right: '$', display: false},
+              {left: '\\(', right: '\\)', display: false},
+              {left: '\\[', right: '\\]', display: true}
+          ],
+          throwOnError : false
+        });
+    });
+</script>
+
 ## 引言
 
 我们都知道二进制补码的规则是正数的补码是他本身，负数的补码是除符号位外所有位取反，然后加1。可是为什么要这样规定呢？为什么不直接使用二进制？如果你有这个疑问，那么这篇文章会告诉你答案。
@@ -25,7 +42,7 @@ draft: false
 
 可以看到，当计算结果在可表示范围内时，补码计算的结果是正确的。对于超出范围的情况我们先按下不表，单表这个补码是怎么解决掉减法的问题的， **其实补码合理地运用了最高位溢出的情况。也就是当1111再加1时会回到0000，这样就形成了类似于钟表的循环结构。** 借助下图，我们可以看到，想让2-3=-1，要么从2的位置向后退3格回到-1，这是减法的思路，要么向前走13格，而-3对应的补码1101就等于13(8+4+1)，这其实就是补码的思路。
 
-![钟表结构的二进制补码](/static/images/two's%20complement-1.jpg)
+![钟表结构的二进制补码](/images/two's%20complement-1.jpg)
 
 花开两朵，各表一枝，再说前面表中超过可表示范围的情况：-7+(-6)。我们把他们放到图上就能看出，-7所在的位置是1001，-6在1010，他们相加也就是从-7的位置向前走$10(1010_2=8+2$)格，正好到了3的位置。这也就解释了为什么计算机得出的结果是3了。
 
