修改表格为html格式

--- a/content/cn/posts/二进制.md
+++ b/content/cn/posts/二进制.md
@@ -34,11 +34,38 @@ draft: false
 
 正当我们要撸起袖子开始干的时候，又有人本着浪罪的原则来了，他说，目前数是能表示了，可是不好运算啊。加法还好算，减法怎么办？能不能直接用加法代替减法？举个🌰，2-3=-1，在4位的二进制中，2表示为$0010_2$，3则是$0011_2$，考虑到2-3=2+(-3)，那么将3转换为-3，即$1011_2$。$0010_2$ + $1011_2$ = $1101_2$。这个结果好像和我们的预期$1001_2$有所差距。这时我们就引入了补码的概念。2的补码是$0010_2$，-3的补码是$1101_2$，$0010_2$ + $1101_2$ = $1111_2$。而这个结果正好是-1的补码。这里还可以再举一些例子。
 
-| 加数1 | 加数 | 加数1二进制补码 | 加数2二进制补码 | 计算结果 | 预期 |
-|--|--|---|---|---|--|
-| 7 | -8 | 0111 | 1000 | 1111=-1 | -1 |
-|-7 | -6 | 1001 | 1010 | 0011=3 | -13 |
-| 5 | 4 | 0101 | 0100 | 1001 = -7 | 9 |
+<table border="2" >
+    <tr>
+        <th>加数1</th>
+        <th>加数2</th>
+        <th>加数1二进制补码</th>
+        <th>加数2二进制补码</th>
+        <th>计算结果</th>
+        <th>预期结果</th>
+    </tr>
+        <td>7</td>
+        <td>-8</td>
+        <td>0111</td>
+        <td>1000</td>
+        <td>1111 = -1</td>
+        <td>-1</td>
+	<tr>
+		<td>-7</td>
+        <td>-6</td>
+        <td>1001</td>
+        <td>1010</td>
+        <td>0011 = 3</td>
+        <td>-13</td>
+	</tr>
+    <tr>
+		<td>5</td>
+        <td>4</td>
+        <td>0101</td>
+        <td>0100</td>
+        <td>1001 = -7</td>
+        <td>9</td>
+	</tr>
+</table>
 
 可以看到，当计算结果在可表示范围内时，补码计算的结果是正确的。对于超出范围的情况我们先按下不表，单表这个补码是怎么解决掉减法的问题的， **其实补码合理地运用了最高位溢出的情况。也就是当1111再加1时会回到0000，这样就形成了类似于钟表的循环结构。** 借助下图，我们可以看到，想让2-3=-1，要么从2的位置向后退3格回到-1，这是减法的思路，要么向前走13格，而-3对应的补码1101就等于13(8+4+1)，这其实就是补码的思路。
 
