优化文章-红十-前端篇，增加实践部分

--- a/content/cn/posts/红十-前端篇.md
+++ b/content/cn/posts/红十-前端篇.md
@@ -33,7 +33,6 @@ npm install @ion-phaser/core --save
 ```js
 import { defineCustomElements as defineIonPhaser } from '@ion-phaser/core/loader';
 
-Vue.config.ignoredElements = [/^ion-/]; // 避免Vue抛出未知元素的警告
 defineIonPhaser(window); // 加载ion-phaser组件到window对象中
 ```
 
@@ -64,6 +63,7 @@ export default {
                     },
                     update: function() {
                     }
+                }
             },
             initialize: false
         }
@@ -75,7 +75,9 @@ export default {
 
 ## 数据传递
 
-要知道让两个框架愉快的合作是有些问题要处理的，最重要的就是数据怎么传递。
+### 理论基础
+
+要知道让两个框架愉快的合作是有些问题要处理的，最重要的就是数据怎么传递。（如果你对Vue和Phaser很熟悉，可以直接看[实践部分](/posts/红十-前端篇/#实践)）
 
 想象中，我们可以利用Vue向后端发起请求，与后端完成数据的收发与存储。同时使用Phaser利用这些数据进行渲染。
 
@@ -90,14 +92,24 @@ mounted() {
 
 这样就可以通过变量访问Vue下的资源了，由此实现了Phaser对Vue的数据读取和函数调用，也就是说Phaser能够根据数据渲染界面并调用Vue中的函数向后端发送数据了。
 
-可是这只能初始化渲染界面，在Vue数据变化时如何告诉Phaser来重新渲染界面呢？我们可以利用Vue的`watch`功能。比如要监听Vue中变量`userInfo`的变化，可以在`game`变量的`create()`函数中使用一下代码：
+可是这只能初始化渲染界面，在Vue数据变化时如何告诉Phaser来重新渲染界面呢？我们可以利用Vue的`watch`功能。比如要监听Vue中变量`userInfo`的变化，可以在`game`变量的`create()`函数中使用以下代码：
 ```js
 game: {
-    vue.$watch('userInfo', (val)=> {
-        console.log('watched userInfo changed to ', val)
-    })
+    create() {
+        vue.$watch('userInfo', (val)=> {
+            console.log('watched userInfo changed to ', val)
+        })
+    }
 }
 ```
+
+### 实践
+
+这样单纯说还是太抽象，我们来写一个小例子。现在我们要用Vue+Phaser实现一个计时器的效果。👉[代码仓库](https://github.com/SunKechang/vue-phaser)
+
+主要代码在src/components/HelloWprld.vue中。按照ReadMe步骤运行，你会得到如下一个实时变化的数字，它代表了你打开了这个页面多少秒。
+
+![image](/images/redten-frontend01.gif)
 
 这样就完整地解决了数据传递的问题：用户在Phaser中的操作会使Phaser通过`vue`变量调用对应函数来传递到服务端；反过来，服务端的数据发送给Vue，`vue.$watch`会监听这一变化，并告知Phaser重新渲染界面。
 
